# stockpilot-investment-analysis-app

./: .dockerignore  .env  .env.sample  .envrc.sample  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  stock_10m.parquet
.airflow/: airflow.cfg  airflow.db
Database/: data_extraction_v1.py  wei_stock_10m_test.parquet
Database/streamlit/components/: indicators.py  main_chart.py
Database/streamlit/data/: stock_data.py
Database/streamlit/stockpilot/: Dockerfile  app.py  docker-compose.yaml  pyproject.toml
Database/streamlit/stockpilot/components/: header.py  indicators.py  main_chart.py  sidebar.py  sidebarelerts.py
Database/streamlit/stockpilot/data/: stock_data.py
airflow/: requirements.txt
airflow/dags/: extract_load_transform_dag.py
dbt/: .user.yml  dbt_project.yml  dockerfile  profiles.example.yml  profiles.yml
dbt/models/gold/: gold.yaml  stocks_gold.sql
dbt/models/silver/: silver.yaml  stocks_silver.sql
dbt/models/sources/: sources.yaml
ingestion/: extract_pipeline.py
scripts/: entrypoint.sh
sql_queries/: bronze_layer_table.sql
sql_templates/: bronze_layer_table.sql
streamlit/: requirements.txt
streamlit/components/: header.py  indicators.py  main_chart.py  sidebar.py
streamlit/data/: stock_data.py
streamlit/stockpilot/: app.py  dockerfile
