[tool.poetry]
name = "stockpilot-investment-app"
version = "0.1.0"
description = "Full data engineering pipeline for ingesting, processing, and analyzing stock market data."
authors = ["Ken Nagata <56562713+ken-nagata@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
apache-airflow = "^2.10.4"
psycopg2-binary = "^2.9.10"
apache-airflow-providers-postgres = "^5.14.0"
dbt-core = "^1.9.1"
dbt-bigquery = "^1.9.0"
pendulum = "^3.0.0"
apache-airflow-providers-standard = "^1.9.2"
apache-airflow-providers-google = "^19.0.0"
yfinance = "^0.2.66"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
apache-airflow-providers-sqlite = "^4.0.0"
dockerfile = "^3.3.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]
